--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="project-images">
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="https://github.com/m-patch-archi/m-patch-archi.github.io/blob/master/1.png?raw=true">
                 <div class="image-text">
                   <a href="file:///Users/User/Desktop/html%20ccs/%E3%82%A2%E3%82%B5%E3%83%92%E3%82%AF%E3%82%99%E3%83%AD%E3%83%BC%E3%83%8F%E3%82%99%E3%83%AB.html">
                     <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
