--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <div class="profile-t">
             <div class="profile-image">
-              <img src="pics/nisi.jpg">
+              <img src="pics/toyama.jpg">
             </div>
             <h1>遠山 正一郎</h1>
             <p>Shoichiro Toyama</p>
