--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <div class="profile-image">
               <img src="pics/nisi.jpg">
             </div>
+            <div class="profile-n-container">
             <h1>西 昭太郎</h1>
             <p>Shotaro Nisi</p>
             <ul>
@@ -119,11 +120,13 @@
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京大学院(都立大学院) 在学</li>
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;まっち patch archi 共同主宰</li>
             </ul>
+            </div>
           </div>
           <div class="profile-t">
             <div class="profile-image">
               <img src="pics/toyama.jpg">
             </div>
+            <div class="profile-t-container">
             <h1>遠山 正一郎</h1>
             <p>Shoichiro Toyama</p>
             <ul>
@@ -133,6 +136,7 @@
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;まっち patch archi 共同主宰</li>
             </ul>
           </div>
+          </div>
       </div>
     </section>
     <section id="projects" class="projects">
@@ -141,7 +145,7 @@
           <div class="project-images">
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.pn">
+                <img src="pics/1.png">
                 <div class="image-text">
                   <a href="file:///Users/User/Desktop/html%20ccs/%E3%82%A2%E3%82%B5%E3%83%92%E3%82%AF%E3%82%99%E3%83%AD%E3%83%BC%E3%83%8F%E3%82%99%E3%83%AB.html">
                     <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
@@ -161,7 +165,7 @@
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/3.png">
+                <img src="pics/4.png">
                 <div class="image-text">
                   <p>HULIC</br>COMPETITION 2019</p>
                 </div>
@@ -218,43 +222,41 @@
           </div>
         </div>
     </section>
-    <footer>
-      <div id ="contact">
-      <div id="footer-icon">
-        <div class="text">
-        <h2>CONTACT</h2>
-        </div>
-        <div class="texts">
-        </div>
-        <div class="icon">
-          <ul>
-            <li>
-              <a href="mailto:@gmail.com" class="btn-social-icon-mail">
-                <span class="btn-social-icon-mail__square"><i class="far fa-envelope"></i></span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="btn-social-icon-twitter">
-                <span class="btn-social-icon-twitter__square"><i class="fab fa-twitter"></i></span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="btn-social-icon-facebook">
-                <span class="btn-social-icon-facebook__square"><i class="fab fa-facebook-f"></i></span>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/yellow_line06/" class="btn-social-icon-instagram">
-                <span class="btn-social-icon-instagram__square"><i class="fab fa-instagram"></i></span>
-              </a>
-            </li>
-          </ul>
-        </div>
+    <div id ="contact">
+      <div class="text">
+      <h2>CONTACT</h2>
       </div>
+      <div id="footer-icon">
+      <div class="icon">
+        <ul>
+          <li>
+            <a href="mailto:@gmail.com" class="btn-social-icon-mail">
+              <span class="btn-social-icon-mail__square"><i class="far fa-envelope"></i></span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="btn-social-icon-twitter">
+              <span class="btn-social-icon-twitter__square"><i class="fab fa-twitter"></i></span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="btn-social-icon-facebook">
+              <span class="btn-social-icon-facebook__square"><i class="fab fa-facebook-f"></i></span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/yellow_line06/" class="btn-social-icon-instagram">
+              <span class="btn-social-icon-instagram__square"><i class="fab fa-instagram"></i></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </div>
+    <footer>
       <div class="copy-right">
         <p>© 2019 まっち patch archi ALL RIGHTS RESERVED.</p>
       </div>
-    </div>
     </footer>
 
 
