--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <script>
-          $(function(){
+          jQuery(function($){
           // #で始まるアンカーをクリックした場合に処理
           $('a[href^=#profile]').click(function() {
           // スクロールの速度
