--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
       </div>
       <script>
-          jQuery(function($){
+          j$(function(){
           // #で始まるアンカーをクリックした場合に処理
-          $('a[href^=#profile]').click(function() {
+          j$('a[href^=#profile]').click(function() {
           // スクロールの速度
           var speed = 400; // ミリ秒
             // アンカーの値取得
@@ -44,7 +44,7 @@
           // 移動先を数値で取得
           var position = target.offset().top;
           // スムーススクロール
-          $('body,html').animate({scrollTop:position}, speed, 'swing');
+          j$('body,html').animate({scrollTop:position}, speed, 'swing');
           return false;
           });
         });
