--- a/index.html
+++ b/index.html
@@ -94,15 +94,13 @@
       <!-- プロジェクトの画像 -->
       <div id="top-wrapper">
         <div class="image-screen">
-          <img src="pics/5.png">
+          <img src="pics/メイン.png">
         </div>
       </div>
       <div id="massage-wrapper">
         <ul>
           <li>まちの中にある小さな使われない空間</li>
-          <li>それを埋め合わせていき大きなまちの価値を作っていく</li>
-          <li>あああああああああああああああああああああああああああああ</li>
-          <li>あああああああああああああああああああああああああああああ</li>
+          <li>小さな潜在的な価値を埋め合わせていき大きなまちの価値を作っていく</li>
         </ul>
         </p>
       </div>
@@ -150,8 +148,8 @@
               <div class="image">
                 <img src="pics/1.png">
                 <div class="image-text">
-                  <a href="file:///Users/User/Desktop/html%20ccs/%E3%82%A2%E3%82%B5%E3%83%92%E3%82%AF%E3%82%99%E3%83%AD%E3%83%BC%E3%83%8F%E3%82%99%E3%83%AB.html">
-                    <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                <!--  <a href=""> -->
+                    <p>ENEMANEHOUSE 2017</p>
                   </a>
                 </div>
               </div>
@@ -160,17 +158,16 @@
               <div class="image">
                 <img src="pics/2.png">
                 <div class="image-text">
-                  <a href="file:///Users/User/Desktop/html%20ccs/ENEMANEHOUSE.html">
-                    <p>ENEMANEHOUSE 2017</p>
+                    <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
                   </a>
                 </div>
               </div>
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/4.png">
+                <img src="pics/3.jpg">
                 <div class="image-text">
-                  <p>HULIC</br>COMPETITION 2019</p>
+                  <p>賃貸住宅のコミュニティを考える</p>
                 </div>
               </div>
             </div>
@@ -184,41 +181,41 @@
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="pics/5.jpg">
                 <div class="image-text">
-                  <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                  <p>brochure</p>
                 </div>
               </div>
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="pics/6.jpg">
                 <div class="image-text">
-                  <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                  <p>11日目の風景を作る</p>
                 </div>
               </div>
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="pics/7.jpg">
                 <div class="image-text">
-                  <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                  <p>地域の連鎖的広がりの実践</p>
                 </div>
               </div>
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="pics/8.png">
                 <div class="image-text">
-                  <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                  <p>改築でござる</br>COMPETITION 2019</p>
                 </div>
               </div>
             </div>
             <div class="project-image">
               <div class="image">
-                <img src="pics/1.png">
+                <img src="pics/9.jpg">
                 <div class="image-text">
-                  <p>ASAHI GLOVAL</br>COMPETITION 2018</p>
+                  <p>空き家活用ボードゲーム</p>
                 </div>
               </div>
             </div>
@@ -243,7 +240,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="btn-social-icon-facebook">
+            <a href="https://business.facebook.com/M_patch_archi-110229837125576/?business_id=138993264052598" class="btn-social-icon-facebook">
               <span class="btn-social-icon-facebook__square"><i class="fab fa-facebook-f"></i></span>
             </a>
           </li>
