--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="icon">
         <ul>
           <li>
-            <a href="mailto:@gmail.com" class="btn-social-icon-mail">
+            <a href="mailto:m.patch.archi@gmail.com" class="btn-social-icon-mail">
               <span class="btn-social-icon-mail__square"><i class="far fa-envelope"></i></span>
             </a>
           </li>
