--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <img src="pics/nisi.jpg">
             </div>
             <div class="profile-n-container">
-            <h1>西 昭太郎</h1>
+            <h1>西 昭太朗</h1>
             <p>Shotaro Nisi</p>
             <ul>
               <li>1994  &nbsp;&nbsp;&nbsp;&nbsp;熊本県生まれ</li>
