--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
                 </div>
               </div>
             </div>
-            </div>
             <div class="project-image">
               <div class="image">
                 <img src="pics/5.jpg">
@@ -223,7 +222,7 @@
       <div class="icon">
         <ul>
           <li>
-            <a href="mailto:m.patch.archi@gmail.com" class="btn-social-icon-mail">
+            <a href="mailto:@gmail.com" class="btn-social-icon-mail">
               <span class="btn-social-icon-mail__square"><i class="far fa-envelope"></i></span>
             </a>
           </li>
