--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class ="container">
         <div id ="header-center">
-          <a href="file:///Users/User/Desktop/html%20ccs/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%98%E3%82%9A%E3%83%BC%E3%82%B7%E3%82%99.html" class="link-homepage">
+          <a href="https://m-patch-archi.github.io">
             <img src ="pics/アイコン.png" alt="homepage" style="height:50px;">
           </a>
         </div>
