--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <ul>
               <li>1994  &nbsp;&nbsp;&nbsp;&nbsp;熊本県生まれ</li>
               <li>2018  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京(都立大学)都市環境学部卒業建築都市コース 卒業</li>
-              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京大学院(都立大学院) 在学</li>
+              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京大学院(都立大学院)都市環境科学研究科都市政策科学域 在学</li>
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;まっち patch archi 共同主宰</li>
             </ul>
             </div>
