--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class ="container">
         <div id ="header-center">
-          <a href="https://m-patch-archi.github.io">
+          <a href="https://m-patch-archi.github.io" class="link-homepage">
             <img src ="pics/アイコン.png" alt="homepage" style="height:50px;">
           </a>
         </div>
@@ -208,6 +208,22 @@
                 <img src="pics/9.jpg">
                 <div class="image-text">
                   <p>空き家活用ボードゲーム</p>
+                </div>
+              </div>
+            </div>
+            <div class="project-image">
+              <div class="image">
+                <img src="pics/10.png">
+                <div class="image-text">
+                  <p>パブリックピエロ</p>
+                </div>
+              </div>
+            </div>
+            <div class="project-image">
+              <div class="image">
+                <img src="pics/11.png">
+                <div class="image-text">
+                  <p>独裁的公共空間</p>
                 </div>
               </div>
             </div>
