--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="image">
                 <img src="pics/1.png">
                 <div class="image-text">
-                    <a href="project1" class="project">
+                    <a href="project1.html" class="project">
                     <p>ENEMANEHOUSE 2017</p>
                   </a>
                 </div>
