--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="btn-social-icon-twitter">
+            <a href="https://twitter.com/m_patch_archi" class="btn-social-icon-twitter">
               <span class="btn-social-icon-twitter__square"><i class="fab fa-twitter"></i></span>
             </a>
           </li>
