--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
           <div class="profile-t">
             <div class="profile-image">
-              <img src="pics/toyama.jpg">
+              <img src="pics/toyama.png">
             </div>
             <div class="profile-t-container">
             <h1>遠山 正一郎</h1>
