--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/explore/tags/%E3%81%BE%E3%81%A3%E3%81%A1patcharchi/?hl=ja" class="btn-social-icon-instagram">
+            <a href="https://www.instagram.com/explore/tags/%E3%81%BE%E3%81%A3%E3%81%A1patcharchi/" class="btn-social-icon-instagram">
               <span class="btn-social-icon-instagram__square"><i class="fab fa-instagram"></i></span>
             </a>
           </li>
