--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <li>1994  &nbsp;&nbsp;&nbsp;&nbsp;熊本県生まれ</li>
               <li>2018  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京(都立大学)都市環境学部卒業建築都市コース 卒業</li>
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京大学院(都立大学院)都市環境科学研究科都市政策科学域 在学</li>
-              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;まっち patch archi 共同主宰</li>
+              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;マチトワ 共同代表</li>
             </ul>
             </div>
           </div>
@@ -134,7 +134,7 @@
               <li>1995  &nbsp;&nbsp;&nbsp;&nbsp;茨城県生まれ</li>
               <li>2018  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京(都立大学)都市環境学部卒業建築都市コース 卒業</li>
               <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;首都大学東京大学院(都立大学院)都市環境科学研究科建築学域 在学</li>
-              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;まっち patch archi 共同主宰</li>
+              <li>2019  &nbsp;&nbsp;&nbsp;&nbsp;マチトワ 共同代表</li>
             </ul>
           </div>
           </div>
@@ -246,36 +246,11 @@
       <div class="text">
       <h2>CONTACT</h2>
       </div>
-      <div id="footer-icon">
-      <div class="icon">
-        <ul>
-          <li>
-            <a href="mailto:m.patch.archi@gmail.com" class="btn-social-icon-mail">
-              <span class="btn-social-icon-mail__square"><i class="far fa-envelope"></i></span>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/m_patch_archi" class="btn-social-icon-twitter">
-              <span class="btn-social-icon-twitter__square"><i class="fab fa-twitter"></i></span>
-            </a>
-          </li>
-          <li>
-            <a href="https://business.facebook.com/M_patch_archi-110229837125576/?business_id=138993264052598" class="btn-social-icon-facebook">
-              <span class="btn-social-icon-facebook__square"><i class="fab fa-facebook-f"></i></span>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/explore/tags/%E3%81%BE%E3%81%A3%E3%81%A1patcharchi/" class="btn-social-icon-instagram">
-              <span class="btn-social-icon-instagram__square"><i class="fab fa-instagram"></i></span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+      <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
     </div>
     <footer>
       <div class="copy-right">
-        <p>© 2019 まっち patch archi ALL RIGHTS RESERVED.</p>
+        <p>© 2021 マチトワ ALL RIGHTS RESERVED.</p>
       </div>
     </footer>
 
