--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
       <div class="text">
       <h2>CONTACT</h2>
       </div>
+      <div ul ="footer-icon">
       <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
+        </div>
     </div>
     <footer>
       <div class="copy-right">
