--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class ="container">
         <div id ="header-center">
-          <a href="https://m-patch-archi.github.io" class="link-homepage">
+          <a href="https://machitowa.github.io/portfolio/" class="link-homepage">
             <img src ="pics/アイコン.png" alt="homepage" style="height:50px;">
           </a>
         </div>
@@ -247,8 +247,8 @@
       <h2>CONTACT</h2>
       </div>
       <div ul ="footer-icon">
-      <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
-        </div>
+       <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
+      </div>
     </div>
     <footer>
       <div class="copy-right">
