--- a/index.html
+++ b/index.html
@@ -241,15 +241,18 @@
             </div>
           </div>
         </div>
-    </section>
+    
     <div id ="contact">
       <div class="text">
       <h2>CONTACT</h2>
       </div>
-      <div class ="footer-icon">
-       <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
-      </div>
+      <div class="footer-icon">
+              <div class="image">
+               <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
+              </div>
+            </div>
     </div>
+    </section>
     <footer>
       <div class="copy-right">
         <p>© 2021 マチトワ ALL RIGHTS RESERVED.</p>
