--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </div>
       <div class="footer-icon">
               <div class="image">
-               <img src ="pics/アイコン.png" alt="https://www.machitowa.com/" style="height:100px;">
+               <a href="https://www.machitowa.com/"><img src="pics/アイコン.png" alt="website"></a>
               </div>
             </div>
     </div>
