--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <h2>CONTACT</h2>
       </div>
       <div class="footer-icon">
-              <div class="image">
+              <div class="icon">
                <a href="https://www.machitowa.com/"><img src="pics/アイコン.png" alt="website"></a>
               </div>
             </div>
