--- a/project10.html
+++ b/project10.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>まっち patch archi</title>
+    <title>machitowa</title>
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
       <div class ="container">
         <div id ="header-center">
-          <a href="https://m-patch-archi.github.io" class="link-homepage">
+          <a href="https://machitowa.github.io/portfolio/" class="link-homepage">
             <img src ="pics/アイコン.png" alt="homepage" style="height:50px;">
           </a>
         </div>
