--- a/project7.html
+++ b/project7.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>まっち patch archi</title>
+    <title>machitowa</title>
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="responsive.css">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link href="https://machitowa.github.io/portfolio/" class="link-homepage">
     <!-- jQuery.jsの読み込み -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
   </head>
