--- a/project7.html
+++ b/project7.html
@@ -13,7 +13,7 @@
     <header>
       <div class ="container">
         <div id ="header-center">
-          <a href="https://m-patch-archi.github.io" class="link-homepage">
+          <a href="https://machitowa.github.io/portfolio/" class="link-homepage">
             <img src ="pics/アイコン.png" alt="homepage" style="height:50px;">
           </a>
         </div>
