--- a/project11.html
+++ b/project11.html
@@ -20,13 +20,13 @@
         <div id ="header-under">
           <ul>
             <li>
-              <a href="https://m-patch-archi.github.io#profile" class="profile">profile</a>
+              <a href="https://machitowa.github.io#profile" class="profile">profile</a>
             </li>
             <li>
-              <a href="https://m-patch-archi.github.io#projects" class="projects">projects</a>
+              <a href="https://machitowa.github.io#projects" class="projects">projects</a>
             </li>
             <li>
-              <a href="https://m-patch-archi.github.io#contact" class="contact">contact</a>
+              <a href="https://machitowa.github.io#contact" class="contact">contact</a>
             </li>
           </ul>
         </div>
@@ -138,7 +138,7 @@
     <footer>
 
       <div class="copy-right">
-        <p>© 2019 まっち patch archi ALL RIGHTS RESERVED.</p>
+        <p>© 2021 マチトワ ALL RIGHTS RESERVED.</p>
       </div>
 
     </footer>
