--- a/project3.html
+++ b/project3.html
@@ -138,7 +138,7 @@
     <footer>
 
       <div class="copy-right">
-        <p>© 2019 まっち patch archi ALL RIGHTS RESERVED.</p>
+        <p>© 2021 マチトワ ALL RIGHTS RESERVED.</p>
       </div>
 
     </footer>
