--- a/project8.html
+++ b/project8.html
@@ -20,13 +20,13 @@
         <div id ="header-under">
           <ul>
             <li>
-              <a href="https://m-patch-archi.github.io#profile" class="profile">profile</a>
+              <a href="https://machitowa.io#profile" class="profile">profile</a>
             </li>
             <li>
-              <a href="https://m-patch-archi.github.io#projects" class="projects">projects</a>
+              <a href="https://machitowa.github.io#projects" class="projects">projects</a>
             </li>
             <li>
-              <a href="https://m-patch-archi.github.io#contact" class="contact">contact</a>
+              <a href="https://machitowa.github.io#contact" class="contact">contact</a>
             </li>
           </ul>
         </div>
